recap of decorators

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -528,218 +528,42 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c8bea8ee-e57a-4641-a960-d3c0e989f0b9",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82fc3a7c-2097-4926-9571-40b0df42711b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " caller greet with args dipak, rathod and kwargs greeting = hi \n"
+     ]
+    }
+   ],
    "source": [
-    "# Generator function: \n",
-    "- In a normal function, we use return. When a function returns, its execution finishes, its local variables are discarded, and the function does not remember its previous state.\n",
+    "def debug(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        args_value = \", \".join(str(arg) for arg in args )\n",
+    "        kwargs_value = \", \".join(f\"{k} = {v}\" for k, v in kwargs.items())\n",
+    "        print(f\" caller {func.__name__} with args {args_value} and kwargs {kwargs_value} \")\n",
+    "        return func(*args, **kwargs)\n",
+    "    return wrapper\n",
     "\n",
-    "- With yield, the function becomes a generator. Instead of finishing execution, it pauses and returns a value. When we request the next value, the function resumes from where it left off, keeping its internal state (local variables, instruction pointer) intact."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "bfe1cef0-7f05-49d3-840c-db9e2b6a9ef3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def count_up_to(num):\n",
-    "    count = 0\n",
-    "    while count <= num:\n",
-    "        yield count\n",
-    "        count += 1\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "97c06949-f3ef-4ca2-8fb6-9d4d70995b37",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "for num in count_up_to(5):\n",
-    "    print(num)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f368101e-f5eb-4c2a-8852-ed5d50860e13",
-   "metadata": {},
-   "source": [
-    "# Send the data to generator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "3dce494f-3e67-45d4-ab84-e5fd2758a337",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def greeting_bot():\n",
-    "    print(\"bot: I am starting!\")\n",
-    "    received_name = yield \"what is your name\"\n",
-    "    print(f\"bot: Nice to meet you , {received_name}\")\n",
-    "    yield f\"goodbye, {received_name}!\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "2d7f8e92-4347-485c-8ab6-543f251491f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bot = greeting_bot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "b59520f5-3d9a-4653-8685-4864c24b72ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bot: I am starting!\n"
-     ]
-    }
-   ],
-   "source": [
-    "question = next(bot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "c1a2cd62-524b-4516-a036-3aeb9c61a43f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "user received: what is your name\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"user received: {question}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "41ca7b26-bb0d-436f-ab04-964e9982f8c4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " dipak\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bot: Nice to meet you , dipak\n"
-     ]
-    }
-   ],
-   "source": [
-    "response = bot.send(str(input()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2d13b74-4891-448d-aa67-0317f491a771",
-   "metadata": {},
-   "source": [
-    "# Generator Expression:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "864ffae0-e183-49f0-94c9-79da2b4da41b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nums = ( i for i in range(10000000000) )\n",
-    "evens = (x for x in nums if x % 2 == 0 )\n",
-    "final = (y * 2 for y in evens )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a2f55978-f7ac-4262-b2a0-ef4033b96553",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(next(final))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b354fe5-054c-4dff-9b56-f0e191c0edc0",
-   "metadata": {},
-   "source": [
-    "# Recursive function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "9742fe44-49ca-45bc-92a9-0644876b1ce9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "120\n"
-     ]
-    }
-   ],
-   "source": [
-    "# factorial \n",
     "\n",
-    "def fact(n):\n",
-    "    if n == 0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return n * fact(n - 1 )\n",
+    "@debug\n",
+    "def greet(name,lastName, greeting):\n",
+    "    pass\n",
     "\n",
-    "print(fact(5))"
+    "greet(\"dipak\", \"rathod\", greeting=\"hi\")"
    ]
   }
  ],
@@ -759,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
